--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,15 @@ services:
     networks:
       - shared_network
 
+  flower:
+    image: mher/flower
+    container_name: flower
+    ports:
+      - "5555:5555"
+    command: ["flower", "--broker=redis://redis:6379/0"]
+    networks:
+      - shared_network
+
 networks:
   default:
     name: celery_testing_network
