--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,13 @@ version: '3.8'
 
 services:
   fastapi:
-    image: tiangolo/uvicorn-gunicorn-fastapi:python3.8
+    build:
+      context: .
+      dockerfile: Dockerfile.fastapi
     container_name: fastapi
+    command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
     ports:
-      - "8000:80"
+      - "8000:8000"
     volumes:
       - .:/app
     depends_on:
@@ -19,6 +22,7 @@ services:
       context: .
       dockerfile: Dockerfile.celery
     container_name: celery_worker
+    command: ["celery", "-A", "tasks", "worker", "--loglevel=info"]
     depends_on:
       - redis
     environment:
