--- a/Dockerfile.fastapi
+++ b/Dockerfile.fastapi
@@ -1,5 +1,5 @@
 # Use the official Python image as the base image
-FROM python:3.8-slim
+FROM python:3.12-slim
 
 # Set the working directory to /app
 WORKDIR /app
@@ -8,7 +8,7 @@ WORKDIR /app
 COPY pyproject.toml poetry.lock ./
 
 # Install the dependencies using poetry
-RUN pip install poetry && poetry install --no-root
+RUN pip install poetry && poetry env use 3.12 && poetry install --no-root
 
 # Ensure uvicorn is installed and available in the PATH
 RUN poetry run pip install uvicorn
