--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 packages = [{include = "celery_testing"}]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.12"
 fastapi = "^0.68.0"
 celery = "^5.1.2"
 redis = "^3.5.3"
@@ -15,6 +15,7 @@ pytest = "^6.2.4"
 pytest-celery = "^0.0.0"
 testcontainers = "^3.4.2"
 flower = "^2.0.1"
+setuptools = "^75.6.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
