--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,15 +12,17 @@ fastapi = "^0.68.0"
 celery = "^5.1.2"
 redis = "^3.5.3"
 pytest = "^6.2.4"
-pytest-celery = "^0.0.0"
 testcontainers = "^3.4.2"
 flower = "^2.0.1"
 setuptools = "^75.6.0"
+uvicorn = "^0.33.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
-pytest-celery = "^0.0.0"
 testcontainers = "^3.4.2"
+
+[tool.poetry.group.dev.dependencies]
+celery = {extras = ["pytest"], version = "^5.4.0"}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
